# file_exchange

./: Makefile  README.md
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_add_indexes_and_triggers.py
backend/src/: app.py  config.py  database.py  dependencies.py  models.py  schemas.py
backend/src/repositories/: alert_repository.py  file_repository.py
backend/src/routers/: __init__.py  alerts.py  files.py
backend/src/services/: __init__.py  alert_service.py  file_service.py  storage_service.py
backend/src/tasks/: celery_app.py  pipeline.py
backend/tests/: conftest.py
backend/tests/integration/: test_alerts_api.py  test_files_api.py
backend/tests/unit/: test_alert_repository.py  test_file_repository.py  test_pipeline.py
frontend/src/app/: page.tsx
frontend/src/components/: AlertsTable.tsx  FileTable.tsx  PageHeader.tsx  UploadModal.tsx
frontend/src/hooks/: useAlerts.ts  useFiles.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
